# perso-2025b-MichelAltmann

./: .gitignore  CHANGELOG.md  CMChatAPI.cabal  README.md  stack.yaml
src/: Main.hs  Types.hs
src/api/: Api.hs  SocketServer.hs
src/database/: Database.hs
src/handlers/: Handlers.hs
src/tests/: Tests.hs
src/utils/: Utils.hs
