cabal-version:       2.2

name:                CMChatAPI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/CMChatAPI#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable CMChatAPI
  hs-source-dirs:      src, src/database, src/api, src/handlers
  main-is:             Main.hs
  other-modules:       Api, Types
  default-language:    Haskell2010
  build-depends: base >= 4.7 && <5
             , websockets
             , stm
             , containers
             , scotty
             , http-types
             , sqlite-simple
             , filepath
             , wai
             , random
             , wai-extra
             , wai-middleware-static
             , bytestring
             , warp
             , directory
             , text
             , aeson
             , time

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite CMChatAPI-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/tests, src, src/database, src/handlers
  main-is:             Tests.hs
  other-modules:       Database, Handlers, Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , HUnit
                     , sqlite-simple
                     , containers
                     , stm
                     , text
                     , wai-extra
                     , filepath
                     , directory
                     , random
                     , time
                     , bytestring
                     , aeson

source-repository head
  type:     git
  location: https://github.com/githubuser/CMChatAPI
